--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ random access memories
                 </p>
                 <p>...</p>
                 <p>
-                    I feel into your river <br>
+                    I fell into your river <br>
                     That's where you told me lies <br>
                     You said that I'd feel better <br>
                     But this is where the good guys die <br>
