--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ random access memories
                 <p>I wanted to apologize today for my unwarranted and wholly unprofessional conduct today. I neglected my responsibilities and obligations to you as a friend, mentor, and officer. </p>
                 <p>Coming to school half an hour later than what I had agreed to was the most inconsiderate thing I could have done to a person like you. Your unmatched commitment in Science Olympiad makes you one of the most valuable members - someone to be cherished and fostered. </p>
                 <p>I don't know how much you sacrifice for Science Olympiad, but I do know that you've sacrificed your time, sleep, and academic progress by dedicating yourself to the program. Your work ethic has truly contributed to our team, yet I completely overlooked this in a move that was unjustifiable.</p>
-                <p>There is no excuse for what I did, and I do not expect you to accpet one. I only ask that you receive this expression of penitence. You are a wonderful partner, and I wish to work and lead with you for the remainder of my time at Woodson. </p>
+                <p>There is no excuse for what I did, and I do not expect you to accept one. I only ask that you receive this expression of penitence. You are a wonderful partner, and I wish to work and lead with you for the remainder of my time at Woodson. </p>
                 <p>If there is anything I can do to make up for what I did yesterday, please reach out. I hope that going forwad, we can be effective partners and work for our mutual progress.</p>
                 <p>Andrew</p>
             </div>
